--- a/src/component/contact/contact.css
+++ b/src/component/contact/contact.css
@@ -6,7 +6,7 @@
   .c-bg {
     width: 20px;
     height: 100%;
-    background-color: #59b256;
+    background-color: rgb(37, 150, 190);
     position: absolute;
   }
   
@@ -74,7 +74,7 @@
   button {
     border: none;
     padding: 15px;
-    background-color: #59b256;
+    background-color: rgb(37, 150, 190);
     color: white;
     font-weight: 500;
     cursor: pointer;
