--- a/src/component/intro/intro.css
+++ b/src/component/intro/intro.css
@@ -55,7 +55,7 @@
     height: 50px;
     font-size: 30px;
     font-weight: bold;
-    color: #59b256;
+    color: rgb(37, 150, 190);
     display: flex;
     align-items: center;
 }
@@ -74,13 +74,14 @@
    position: absolute;
 }
 .i-bg{
-    clip-path: polygon(100% 0%, 100% 58%, 100% 100%, 0 100%, 0 53%, 0 0);
+    /* clip-path: polygon(100% 0%, 100% 58%, 100% 100%, 0 100%, 0 53%, 0 0);
     background-color: #23b8d6;
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 0; */
+    display: none;
 }
 
 @media screen and (max-width: 480px) {
