--- a/src/component/intro/intro.css
+++ b/src/component/intro/intro.css
@@ -67,9 +67,9 @@
   }
 .i-img{
     
-    margin-left: 50px; 
-  
-   height: 750px;
+    margin-top: 200px;
+   width: 50%;
+   height:50%;
    object-fit: cover;
    position: absolute;
 }
@@ -98,7 +98,7 @@
         height: 50px;
         font-size: 15px;
         font-weight: bold;
-        color: #59b256;
+        color: rgb(37, 150, 190);
         display: flex;
         align-items: center;
     }
