--- a/src/component/intro/intro.css
+++ b/src/component/intro/intro.css
@@ -67,9 +67,10 @@
   }
 .i-img{
     
-    margin-top: 200px;
-   width: 50%;
-   height:50%;
+    margin-top: 140px;
+    margin-left: 50px;
+   width: 80%;
+   height:80%;
    object-fit: cover;
    position: absolute;
 }
@@ -122,7 +123,7 @@
     .i-img{
     
        margin-left: 40px; 
-      margin-top: 30px;
+       margin-top: 30px;
        height: 250px;
        object-fit: cover;
        position: absolute;
