--- a/src/component/intro/intro.css
+++ b/src/component/intro/intro.css
@@ -86,6 +86,16 @@
 }
 
 @media screen and (max-width: 480px) {
+    .i-name{
+        font-size: 30px;
+    
+    
+    }
+    .i-intro{
+        font-size: 25px;
+        font-weight: 300;
+    }
+
     .i {
       flex-direction: column;
       margin-left: 20px;
@@ -122,8 +132,8 @@
       }
     .i-img{
     
-       margin-left: 40px; 
-       margin-top: 30px;
+       margin-left: 25px; 
+       margin-top: 60px;
        height: 250px;
        object-fit: cover;
        position: absolute;
