--- a/src/component/Product/product.css
+++ b/src/component/Product/product.css
@@ -32,10 +32,16 @@
   .p:hover .p-img {
     transform: translateY(-20%);
   }
+  .heading{
+    overflow: hidden;
+  }
   
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 400px)  and (min-width:200px){
   .p {
     width: 40%;
     height: 20vh;
+  }
+  .heading{
+    font-size: 8px;
   }
 }
