--- a/src/component/ProductList/productList.css
+++ b/src/component/ProductList/productList.css
@@ -27,7 +27,7 @@
   }
 
   
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 400px) and (min-width:200px) {
   .pl {
     padding: 10px;
   }
