--- a/src/component/contact/contact.css
+++ b/src/component/contact/contact.css
@@ -81,7 +81,7 @@
   }
   
  
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 400px) and (min-width:200px) {
   
   
   .c-wrapper {
@@ -130,3 +130,53 @@
     margin-left: 0;
   }
 }
+/* 
+@media screen and (max-width: 600px) and (min-width:400px){
+  
+  
+  .c-wrapper {
+    flex-direction: column;
+    padding: 0px 50px;
+  }
+
+  .c-title {
+    font-size: 30px;
+  }
+
+  .c-info-item {
+    margin: 20px 0px;
+    width: 100%;
+    font-size: 13px;
+  }
+
+  .c-desc {
+    display: none;
+  }
+
+  form {
+    margin-top: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+  }
+
+  input {
+    width: 35%;
+    height: 40px;
+    margin: 10px;
+    margin-left: 0;
+  }
+
+  button {
+    height: 40px;
+    width: 30%;
+   margin-left: 80px;
+  
+  }
+  textarea{
+    width: 100%;
+    height: 50px;
+    margin: 10px;
+    margin-left: 0;
+  }
+} */
